# aiogram-template

./: docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 592a43fea1bd_create_user_table.py
src/: config.py
src/bot/: __main__.py  dispatcher.py
src/bot/handlers/: __init__.py
src/bot/handlers/common/: __init__.py  start.py
src/bot/structures/: role.py
src/bot/structures/text/: __init__.py  admin.py  common.py
src/db/: database.py
src/db/models/: user.py
src/db/repositories/: user.py
