[tool.poetry]
name = "aiogramtemplate"
version = "0.1.0"
description = ""
authors = ["VladimirLakhtin <vllakhtin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
sqlalchemy = "^2.0.22"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
alembic = "^1.12.0"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
